# pistache

./: .bazelrc  .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .overcommit.yml  .travis.yml  14.9edccfba.js  17896441.be510e19.js  2.7120d5ec.js  2.e17bc1b5.js  404.html  8070e160.b8bbf4f4.js  8070e160.ffcc458d.js  88aa539f.6f5b918c.js  935f2afb.0694187a.js  BUILD.bazel  Building on BSD - FreeBSD, OpenBSD and NetBSD.txt  Building on Windows.txt  Building on macOS with cmake.txt  Building on macOS.txt  CMakeLists.txt  CNAME  MODULE.bazel  Makefile  README.md  WORKSPACE.bazel  bootstrap-env.bash  bootstrap.bash  c4f5d8e4.730c1d82.js  changelog  clean.sh  cmkbuild.sh  cmkbuilddebug.sh  cmksetdirvars.sh  codecov.yml  common.a2a55ec7.js  control  copyright  cpp-toolchain.bash  (+40 more)
.circleci/: config.yml
.github/: dependabot.yml
.hooks/: pre-commit
.reuse/: dep5
BUILDROOT/: README.md
CMakeModules/: CheckAtomic.cmake  FindRapidJSON.cmake
RPMS/: README.md
SOURCES/: README.md
SPECS/: libpistache.spec
SRPMS/: README.md
bldscripts/: About The Build Scripts.txt  clean.sh  cmkbuild.sh  cmkbuilddebug.sh  cmkdebugsetdirvars.sh  cmksetdirvars.sh  gccmacsetup.sh  mesbuild.sh  mesbuilddebug.sh  mesbuildflibev.sh  mesbuildflibevdebug.sh  mesbuildnossl.sh  mesbuildnossldebug.sh  mesdebugflibevsetdirvars.sh  mesdebugsetdirvars.sh  mesflibevsetdirvars.sh  mesinstall.sh  mesinstalldebug.sh  mesinstallflibev.sh  mesinstallflibevdebug.sh  mesinstallnossl.sh  mesinstallnossldebug.sh  messetdirvars.sh  messetdirvarsfinish.sh  mestest.sh  mestestdebug.sh  mestestflibev.sh  mestestflibevdebug.sh  mestestnossl.sh  mestestnossldebug.sh  nfbmesbuild.sh
blog/: atom.xml  rss.xml
centos/: libpistache.spec.in
cmake/: pistacheConfig.cmake.in
debian/: changelog  control  copyright  libpistache-dev.docs  libpistache-dev.examples  libpistache-dev.install  libpistache0.install  rules  watch
docs/: Doxyfile.in  index.html  meson.build
docs/asynchronous-http-programming/: index.html
docs/headers/: index.html
docs/http-handler/: index.html
docs/rest-description/: index.html
docs/routing/: index.html
examples/: CMakeLists.txt  custom_header.cc  hello_server.cc  http_client.cc  http_server.cc  http_server_shutdown.cc  meson.build  rest_description.cc  rest_server.cc
guide/: index.html
homebrew/: pistache.rb  runformula.sh
include/: .http.h.swp  .http_headers.h.swp  async.h  client.h  common.h  description.h  endpoint.h  http.h  http_defs.h  http_header.h  http_headers.h  io.h  iterator_adapter.h  listener.h  mailbox.h  meson.build  mime.h  net.h  optional.h  os.h  peer.h  prototype.h  reactor.h  router.h  stream.h  tcp.h  timer_pool.h  transport.h  view.h
include/pistache/: .gitignore  PS_TimeLog.h  PistCheck.h  async.h  base64.h  client.h  common.h  config.h  cookie.h  date.h  date_wrapper.h  description.h  em_socket_t.h  emosandlibevdefs.h  endpoint.h  errors.h  eventmeth.h  flags.h  http.h  http_defs.h  http_header.h  http_headers.h  iterator_adapter.h  listener.h  log.h  mailbox.h  meson.build  meta.h  mime.h  net.h  optional.h  os.h  peer.h  pist_check.h  pist_clock_gettime.h  pist_fcntl.h  pist_filefns.h  pist_ifaddrs.h  pist_quote.h  pist_resource.h  (+29 more)
include/pistache/serializer/: rapidjson.h
patches/: disable-gmock-1.11-tests.patch  series
pistache.io/: docusaurus.config.js  package.json  package.json.license  (+1 more)
src/: .CMakeLists.txt.swp  CMakeLists.txt  MemoryPool.h  MemoryPool.tcc  PistacheConfig.cmake.in  array_buf.h  async.h  common.h  cookie.cc  cookie.h  flags.h  http.cc  http.h  http_defs.cc  http_defs.h  http_header.cc  http_header.h  http_headers.cc  http_headers.h  io.cc  io.h  listener.cc  listener.h  mailbox.h  meson.build  mime.cc  mime.h  net.cc  net.h  optional.h  os.cc  os.h  peer.cc  peer.h  router.cc  router.h  stream.cc  stream.h  tcp.h  view.h
src/client/: client.cc  ssl_async.cc  sslclient.cc
src/common/: PS_TimeLog.cc  PistCheck.cc  PistSysLog.cc  base64.cc  cookie.cc  description.cc  eventmeth.cc  http.cc  http_defs.cc  http_header.cc  http_headers.cc  io.cc  log.cc  mime.cc  net.cc  os.cc  peer.cc  pist_check.cc  pist_clock_gettime.cc  pist_fcntl.cc  pist_filefns.cc  pist_ifaddrs.cc  pist_resource.cc  pist_sockfns.cc  pist_strerror_r.cc  pist_syslog.cc  pist_timelog.cc  ps_basename.cc  ps_sendfile.cc  ps_strl.cc  reactor.cc  stream.cc  string_logger.cc  tcp.cc  timer_pool.cc  transport.cc  utils.cc
src/server/: endpoint.cc  listener.cc  router.cc
src/winlog/: convert_man_to_mc.py  installman.ps1  installmanatinstall.ps1  mkwinlog.ps1  pist_winlog.man  pistachelog.def
subprojects/dump2def/: dump2def.cc  meson.build
tests/: CMakeLists.txt  async_test.cc  control  cookie_test.cc  cookie_test_2.cc  cookie_test_3.cc  endpoint_initialization_test.cc  headers_test.cc  helpers_test.cc  http_client_test.cc  http_parsing_test.cc  http_server_test.cc  http_uri_test.cc  httplib.h  https_client_test.cc  https_client_test_net.cc  https_server_test.cc  listener_test.cc  listener_tls_test.cc  log_api_test.cc  logger_test.cc  mailbox_test.cc  meson.build  mime_test.cc  net_test.cc  optional_test.cc  parser_test.cc  payload_test.cc  reactor_test.cc  remove_routes_ut.cc  request_size_test.cc  rest_server_test.cc  rest_swagger_server_test.cc  router_test.cc  stream_test.cc  streaming_test.cc  string_logger_test.cc  string_view_test.cc  tcp_client.h  test-compilation-and-link.sh  (+3 more)
tests/certs/: cacert.pem.license  cacert.spdx  client.crt  client.key  intermediateCA.crt  intermediateCA.key  meson.build  new-certs.sh  openssl.conf  rootCA.crt  rootCA.key  server.crt  server.crt.license  server.key  server_from_intermediate.crt  server_from_intermediate.key  server_from_intermediate_with_chain.crt  server_protected.crt  server_protected.key
tests/fuzzers/: CMakeLists.txt  fuzz_parser.cpp
tests/fuzzers/corpus/: http-1.txt  http-11.txt  http-12.txt  http-13.txt  http-14.txt  http-16.txt  http-17.txt  http-3.txt  http-4.txt  http-6.txt
tests/helpers/: CMakeLists.txt  fd_utils.cc  fd_utils.h  meson.build  win_fork_ish.cc  win_fork_ish.h
(+181 files in other folders)
